--- a/kcp_bridge/CMakeLists.txt
+++ b/kcp_bridge/CMakeLists.txt
@@ -3,4 +3,6 @@ project(kcp_bridge)
 add_library(${PROJECT_NAME} SHARED
     ${KCP_SOURCE}
     kcp_bridge.cpp
+    connection/connection.cpp
+    connection/connection.h
 )
