--- a/kcp_bridge/CMakeLists.txt
+++ b/kcp_bridge/CMakeLists.txt
@@ -7,6 +7,10 @@ add_library(${PROJECT_NAME} SHARED
     connection/connection.h
     connection/connection_live.h
     connection/connection_live.cpp
+    connection/kcp_object.h
+    connection/kcp_object.cpp
+    connection/kcp_object_start_tools.h
+    connection/kcp_object_start_tools.cpp
 
     Tools/tools.h
     Tools/tools.cpp
