--- a/kcp_test/CMakeLists.txt
+++ b/kcp_test/CMakeLists.txt
@@ -3,7 +3,7 @@ project(kcp_test LANGUAGES CXX)
 add_executable(
     ${PROJECT_NAME}
     main.cpp
-)
+ "Server/server.h")
 
 target_link_libraries(
     ${PROJECT_NAME}
